--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=ClipBoardProject
+
+spring.mvc.static-locations=/resources/**
+spring.mvc.static-path-pattern=/resources/**
+# servlet의 접두사와 접미사
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
+# 서버 자동 재가동
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/clipboard
+spring.datasource.username=root
+spring.datasource.password=root
+server.servlet.encoding.charset=utf-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+mybatis.type-aliases-package=com.example.demo.dao
+mybatis.mapper-locations=mybatis/mapper/**/*.xml
+
