--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.45.52:3306/clipboard
-spring.datasource.username=clipboardTeam
+spring.datasource.url=jdbc:mysql://192.168.1.100:28309/mysql
+spring.datasource.username=root
 spring.datasource.password=clipboardTeam
+spring.jpa.hibernate.ddl-auto=create
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
